Don't forget to call at least one time ldconfig to register all the new library.

--- a/wiki/InstallerElixir.wiki
+++ b/wiki/InstallerElixir.wiki
@@ -83,6 +83,7 @@ Le processus est plutôt simple :
 ./configure
 make
 sudo make install
+sudo ldconfig
 }}}
 
 Et voilà ! Vous pouvez maintenant tester Elixir.
