--- a/wiki/TRectangle.wiki
+++ b/wiki/TRectangle.wiki
@@ -8,6 +8,27 @@ TRectangle est une surface rectangulaire affichée par Elixir
 
 Cet objet n'a pas de propriété particulières, mais il hérite de toutes les propriétés et méthodes de son ancêtre [TEvasObject].
 
+== Constructor ==
+
+{{{
+function TRectangle(x, y, width, height, colorRGB, alpha = 255);
+}}}
+
+= Créer un rectangle =
+
+Pour afficher un rectangle de couleur à l'écran, il suffit de créer une instance de TRectangle.
+
+{{{
+elx.include('Cauldron.js');
+
+var rouge = new TRectangle(10, 10, 320, 200, 0xFF0000);
+var vert  = new TRectangle(40, 20, 320, 200, 0x00FF00, 196);
+var bleu  = new TRectangle(60, 30, 320, 200, 0x0000FF, 128);
+
+screen.onKeyup = function(event) { screen.quit() }
+screen.main(); 
+}}}
+
 
 = Details =
 
