--- a/wiki/evan.wiki
+++ b/wiki/evan.wiki
@@ -3,16 +3,16 @@
 = Qu'est ce que Evan ? =
 
 Evan est une "bibliothèque" qui contient trois objets destinés à vous aider dans le développement d'applications pour la Freebox :
-   * Un objet evan_list
-   * Un objet evan_keyboard
-   * Un objet evan_input
+   * Un objet [evan_list]
+   * Un objet [evan_keyboard]
+   * Un objet [evan_input]
 
 L'utilisation de ces objets est simplifiée au maximum afin de permettre une utilisation quasi-immédiate.
 
 = Description des objets =
 
 Les trois objets sont en réalité des "Smart Object".
-Une définition tirée de la doc serait :
+Une définition tirée de la [http://docs.enlightenment.org/auto/evas/group__Evas__Smart__Object__Group.html doc] serait :
  Smart objects are groupings of primitive evas objects that behave as a cohesive group. 
  For instance, a file manager icon may be a smart object composed of an image object, 
  a text label and two rectangles that appear behind the image and text when the icon 
@@ -30,12 +30,12 @@ Comme son nom peut le laisser supposer, il s'agit d'afficher une liste d'items. 
    * Eventuellement, le thème d'un scroller (genre barre de défilement)
 
 La liste peut être verticale ou horizontale, le nombre d'éléments peut varier dynamiquement.
-Pour plus d'info sur evan_list, consulter sa doc [evan_list ici].
+Pour plus d'info sur evan_list, consulter sa doc [evan_list ici] et voir l'exemple [evan_list_exemple].
 
 ==evan_keyboard ==
 
 Un clavier AZERTY complet. Le thème n'est pas modifiable directement pour l'instant, mais le clavier est utilisable. Il suffira de fournir le callback appelé lorsque l'utilisateur appuye sur une touche.
-Pour plus d'info sur evan_keyboard, consulter sa doc [evan_keyboard ici].
+Pour plus d'info sur [evan_keyboard], consulter sa doc [evan_keyboard ici] et voir l'exemple d'[evan_input_exemple Evan_Input].
 
 == evan_input ==
 
@@ -46,4 +46,4 @@ Permet par défaut 3 modes de saisies :
    * Mode {{{123}}}, permet d'entrer des chiffres
    
 En plus de ces trois modes, il est possible d'utiliser le {{{evan_keyboard}}} pour entrer du texte.
-Pour plus d'info sur evan_input, consulter sa doc [evan_input ici].
+Pour plus d'info sur evan_input, consulter sa doc [evan_input ici] et voir l'exemple [evan_input_exemple].
