--- a/wiki/evan_list_exemple.wiki
+++ b/wiki/evan_list_exemple.wiki
@@ -174,20 +174,20 @@ En preload, on pense à remplir le texte de nos items :
 {{{
 function _item_preload(data, obj, signal, source){
     
-    elx.print("Preload de l'item  " + data + "\n");
-   edje_object_part_text_set(obj,"item/text",texte[data]);    
+    elx.print("Preload de l'item  " + source + "\n");
+   edje_object_part_text_set(obj,"item/text",texte[source]);    
    edje_object_preload(obj, true);
 }
 }}}
 {{{
 function _item_unload(data, obj, signal, source){
-elx.print("Unload de l'item "+data + "\n");
+elx.print("Unload de l'item "+source + "\n");
 }
 }}}
 {{{
 function _item_show(data, obj, signal, source){
  
-    indice = data;
+    indice = source;
   
     evas_object_show(obj);
     elx.print("Show "+indice + "\n");
@@ -196,7 +196,7 @@ function _item_show(data, obj, signal, source){
 {{{
 function _item_hide(data, obj, signal, source){
     evas_object_hide(obj);
-    elx.print("Hide "+ data + "\n");
+    elx.print("Hide "+ source + "\n");
 }
 }}}
 Pour le focus/unfocus, on appelle nos programmes définis dans le thème :
@@ -204,14 +204,14 @@ Pour le focus/unfocus, on appelle nos programmes définis dans le thème :
 function _item_focus(data, obj, signal, source){
     evas_object_focus_set(obj, 1);
     edje_object_signal_emit(obj, "mouse,in", "item/bg");
-    elx.print("Focus de l'item "+data + "\n");
+    elx.print("Focus de l'item "+source + "\n");
 }
 }}}
 {{{
 function _item_unfocus(data, obj, signal, source){
     evas_object_focus_set(obj, 0);
     edje_object_signal_emit(obj, "mouse,out", "item/bg");  
-    elx.print("Unfocus de l'item "+data +"\n");
+    elx.print("Unfocus de l'item "+source +"\n");
 }
 }}}
 
